# Roguelike

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pending_commit_message.new.txt  .pending_commit_message.txt  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  affix_tmp.cfg  copilot-instructions.md  dbg.txt  encounters_phase2.cfg  encounters_phase3.cfg  err_combo.txt  gen_params.cfg  hard_reset_repo.ps1  implementation_plan.txt  implementation_plan_combatsystem.txt  implementation_plan_itemsystem.txt  implementation_plan_maintainability.txt  implementation_plan_skillsystem.txt  item_tmp.cfg  materials_test.cfg  modifiers_phase3.cfg  phase18_stress_items.cfg  player_stats.cfg  pre-commit-config.txt  prompt_template refactor_file.txt  prompt_template.txt  prompt_template_plan_generation.txt  refactor_plan.txt  rm_probe.txt  save_slot_0.sav  save_slot_0_1756155963.bak  save_slot_0_1756155973.bak  save_slot_0_1756156095.bak  save_slot_0_1756156970.bak  (+8 more)
.githooks/: pre-commit
.github/workflows/: ci.yml
.refactor_backups/: 20250824_075519__backup__CMakeLists.txt  20250824_075741__backup__CMakeLists.txt  20250824_075905__backup__CMakeLists.txt  20250824_075959__backup__CMakeLists.txt
Testing/: TAG
Testing/20250822-1238/: Test.xml
assets/: affixes.cfg  biome_assets.cfg  encounters.cfg  enemies.cfg  enemies.json  equipment_test_sockets.cfg  gems_test.cfg  hitbox_tuning.json  hud_layout.cfg  items.json  loot_tables.json  mining_nodes.cfg  plants.cfg  player_anim.cfg  player_sheets.cfg  projectiles.cfg  resource_nodes.cfg  skill_maze_config.json  skills_uhf87f.cfg  skills_uhf87f.json  sounds.cfg  tag_registry.json  test_equipment_items.cfg  test_items.cfg  test_loot_tables.cfg  tiles.cfg  trees.cfg  ui_theme_default.cfg  weapon_hit_geo.json
assets/dialogue/: avatars.cfg  dialogues.json  script_intro.json  style_default.json
assets/enemies/: orc_grunt.json  orc_rogue.json  orc_shaman.json  orc_warrior.json  skeleton_grunt.json  skeleton_mage.json  skeleton_rogue.json  skeleton_warrior.json
assets/example_pack/: affixes.cfg  items.cfg  loot_tables.cfg
assets/items/: armor.cfg  gems.cfg  materials.cfg  misc.cfg  potions.cfg  swords.cfg
assets/materials/: materials.cfg
assets/skills/: rename_map.txt
assets/vendors/: inventory_templates.json  price_policies.json  (+3 more)
cmake/: Warnings.cmake
docs/: DEPENDENCY_BOUNDARIES.md  DOXYGEN_GUIDE.md  INTERNAL_HEADERS.md  LOOT_ARCHITECTURE.md  LOOT_RARITY_AFFIX_STYLE.md  OWNERSHIP.md
roadmaps/: codebase_optimization.txt  fix_unit_tests.txt  implementation_equipment_system.txt  implementation_plan_aisystem.txt  implementation_plan_audiovfxsystem.txt  implementation_plan_character_progression_system.txt  implementation_plan_combatsystem.txt  implementation_plan_crafting_gathering_system.txt  implementation_plan_debugging_overlay.txt  implementation_plan_detection.txt  implementation_plan_dialoguesystem.txt  implementation_plan_documentation.txt  implementation_plan_dungeon_system.txt  implementation_plan_enemy_difficulty_system.txt  implementation_plan_enemy_integration.txt  implementation_plan_equipment_system.txt  implementation_plan_hit_system.txt  implementation_plan_integration_plumbing.txt  implementation_plan_inventory_system.txt  implementation_plan_itemsystem.txt  implementation_plan_maintainability.txt  implementation_plan_persistence_migration.txt  implementation_plan_skillsystem.txt  implementation_plan_start_screen.txt  implementation_plan_uisystem.txt  implementation_plan_vendor_system.txt  implementation_plan_world_boss_system.txt  implementation_plan_world_generation.txt  implementation_world_boss_system.txt
scripts/: gen_skills_json.ps1  hard_reset_repo.ps1  move-source.ps1  project_stats.ps1  run_all_tests.ps1  run_equipment_gates.ps1  run_game_build.ps1  run_precommit_and_commit.ps1
src/: main.c
tests/: CMakeLists.txt  test_audio_vfx_phase6_4_music_layering.c  test_enemy_json_loader.c  test_json_envelope.c  test_json_io.c  test_phase3_8_worldgen_resource_bridge.c  test_progression_phase11_cache.c
tests/cmake/: AI.cmake  AudioVfx.cmake  Combat.cmake  Config.cmake  Crafting.cmake  Dialogue.cmake  Enemy.cmake  Equipment.cmake  Event.cmake  Hit.cmake  Inventory.cmake  Loot.cmake  Management.cmake  Progression.cmake  Resource.cmake  SaveSystem.cmake  Skills.cmake  StartScreen.cmake  Sync.cmake  System_Bridges.cmake  Talents.cmake  UI.cmake  Util.cmake  Vegetation.cmake  Vendor.cmake  WorldGen.cmake
tests/integration/: test_boot.c  test_dash_skill.c  test_enemy_spawning.c  test_phase3_11_integration_bridges.c
tests/support/: test_bootstrap_win_suppress.c
tests/unit/: test_affix_item_attachment.c  test_affix_parse.c  test_affix_persistence_roundtrip.c  test_affix_roll_deterministic.c  test_affix_roll_value.c  test_ai_behavior_tree.c  test_ai_phase10_debug.c  test_ai_phase11_blackboard_fuzz.c  test_ai_phase11_core_nodes.c  test_ai_phase11_perf_guard.c  test_ai_phase11_repro_trace.c  test_ai_phase11_scenario.c  test_ai_phase1_scheduler_trace.c  test_ai_phase2_blackboard.c  test_ai_phase3_perception.c  test_ai_phase4_cover.c  test_ai_phase4_nodes.c  test_ai_phase4_retry.c  test_ai_phase4_tactical.c  test_ai_phase5_2_flow_field.c  test_ai_phase5_3_local_avoid.c  test_ai_phase5_enemy_integration.c  test_ai_phase5_path_smoothing_and_stuck.c  test_ai_phase5_stuck_detect.c  test_ai_phase6_1_ranged_projectile.c  test_ai_phase6_2_reactions.c  test_ai_phase6_3_opportunistic.c  test_ai_phase6_4_kiting.c  test_ai_phase6_5_focus.c  test_ai_phase6_6_finisher.c  test_ai_phase6_7_decorators.c  test_ai_phase7_group_tactics.c  test_ai_phase9_agent_pool.c  test_ai_phase9_budget.c  test_ai_phase9_incremental_lod.c  test_ai_phase9_stress.c  test_ap_soft_throttle.c  test_asset_dep.c  test_astar.c  test_attack_cone_regression.c  (+549 more)
tools/: .sprite_picker_recent.txt  .sprite_picker_settings.json  c_refactor_tool.py  c_refactor_tool_cli.py  coverage_check.sh  file_move_commands.txt  maint_audit.py  move_file_pair.ps1  skill_strength_dist.py  sprite_picker.py  sprite_picker_clean.py  weapon_pose_tool.c
(+998 files in other folders)
